# individual-project

./: .gitignore  MANIFEST.in  setup.cfg  setup.py
Department-app/: README.rst  manage.py
Departments-app/DepartmentApp/: asgi.py
Django-site/mysite/: settings.py
