[metadata]
name = departments-app
version = 0.1
description = Application for managing departments and employees
long_description = file: README.md
url = https://www.example.com/
author = Ilya Rozumouski
author_email = ilya_razumouski@epam.com
license = BSD-3-Clause 
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: X.Y 
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:

